fixed: typo link

--- a/views/base.twig
+++ b/views/base.twig
@@ -12,6 +12,9 @@
   <div id="footer">
     {% block footer %}
       <p>このサイトに関するお問い合わせ先:<a href="http://twitter.com/brtriver">@brtriver</a></p>
+      <p><a href="https://github.com/brtriver/silx-users-jp">
+        このサイトのコードをGitHUBで見る
+      </a></p>
       silex-users-jp is powered by <a href="http://silex-project.org/">Silex</a> and <a href="http://www.twig-project.org/">Twig</a> and inspired by <a href="http://codeigniter.com/user_guide/">CodeIgniter User Guide Site</a>
     {% endblock %}
   </div>
