--- a/views/index.twig
+++ b/views/index.twig
@@ -1,4 +1,3 @@
-{% set jpdoc = "http://docs.symfony.gr.jp/silex" %}
 {% set jpdoc = "doc/html" %}
 
 {% extends "base.twig" %}
@@ -29,7 +28,7 @@
 <ul>
 	<li><a href="{{jpdoc}}/intro.html"> Silex って何？</a></li>
 	<li><a href="{{jpdoc}}/usage.html"> 使い方</a></li>
-	<li><a href="{{jpdoc}}/service.html"> サービスコンテナ</a></li>
+	<li><a href="{{jpdoc}}/services.html"> サービスコンテナ</a></li>
 	<li><a href="{{jpdoc}}/extensions.html"> エクステンションの仕組み</a></li>
 	<li><a href="{{jpdoc}}/testing.html"> テスト</a></li>
 	<li><a href="{{jpdoc}}/internals.html"> 内部の仕組み</a></li>
@@ -110,7 +109,8 @@
 <ul>
 	<li><a href="https://github.com/77web/my-silex-examples">サンプルコード色々 (@77web)</a></li>
 	<li><a href="https://github.com/igorw/silex-examples">エクステンションのサンプルコード (@igorwesome)</a></li>
-	<li><a href="https://github.com/brtriver/MameForm">サンプル問い合わせフォーム(MameForm)</a></li>
+	<li><a href="https://github.com/brtriver/MameForm">問い合わせフォーム(MameForm)</a></li>
+	<li><a href="https://github.com/brtriver/MameForm">問い合わせフォームα(@uechoco)</a></li>
 </ul>
 
 
@@ -120,7 +120,7 @@
     <li><a href="http://www.php.net/manual/ja/language.namespaces.php">PHP マニュアル 名前空間</a></li>
     <li><a href="http://www.php.net/manual/ja/functions.anonymous.php">PHP マニュアル 無名関数</a></li>
     <li><a href="http://jp2.php.net/manual/ja/intro.phar.php">PHP マニュアル phar</a></li>
-    <li><a href="https://github.com/fabpot/Pimple">Pimple (DI)</a></li>
+    <li><a href="http://pimple-project.org/">Pimple (DI)</a></li>
 	<li><a href="http://symfony.com/doc/current/book/index.html"> Symfony2ドキュメント</a><a href="http://docs.symfony.gr.jp/symfony2/">(日本語)</a></li>
 	<li><a href="http://www.twig-project.org/documentation"> Twigドキュメント</a><a href="https://github.com/masakielastic/twig-ja">(日本語)</a></li>
 </ul>
