--- a/views/index.twig
+++ b/views/index.twig
@@ -120,6 +120,7 @@
     <li><a href="https://github.com/nrk/PredisExtension"> PredisExtension</a></li>
     <li><a href="https://github.com/redpanda/silex-gravatar"> GravatarExtension</a></li>
     <li><a href="https://github.com/heavenshell/php-silex-zf-validate">ValidateExtension(Zend_Validate)</a></li>
+    <li><a href="https://github.com/heavenshell/php-silex-zf-db">DbExtension(Zend_Db)</a></li>
     <li><p><a href="https://github.com/fate/Silex-Extensions">Silex-Extensions (@hahaitsfate)</a></p></li>
     <p>
         以下のエクステンションを含む
