fixed: type asse*r*t

--- a/views/index.twig
+++ b/views/index.twig
@@ -80,7 +80,7 @@
     <li><a href="{{jpdoc}}{{base}}post"> $app->post()</a></li>
     <li><a href="{{jpdoc}}{{base}}id2"> $app->match() ..他</a></li>
     <li><a href="{{jpdoc}}{{base}}id3"> $app->convert()</a></li>
-    <li><a href="{{jpdoc}}{{base}}id4"> $app->asset()</a></li>
+    <li><a href="{{jpdoc}}{{base}}id4"> $app->assert()</a></li>
     <li><a href="{{jpdoc}}{{base}}id5"> $app->value()</a></li>
     <li><a href="{{jpdoc}}{{base}}named-routes"> $app->bind()</a></li>
     <li><a href="{{jpdoc}}{{base}}before-and-after-filters"> $app->before(), $app->after()</a></li>
