fixed uechoco sample link

--- a/views/index.twig
+++ b/views/index.twig
@@ -146,7 +146,7 @@
 	<li><a href="https://github.com/77web/my-silex-examples">サンプルコード色々 (@77web)</a></li>
 	<li><a href="https://github.com/igorw/silex-examples">エクステンションのサンプルコード (@igorwesome)</a></li>
 	<li><a href="https://github.com/brtriver/MameForm">問い合わせフォーム(MameForm)</a></li>
-	<li><a href="https://github.com/brtriver/MameForm">問い合わせフォームα(@uechoco)</a></li>
+	<li><a href="https://github.com/uechoco/MameForm">問い合わせフォームα(@uechoco)</a></li>
 </ul>
 
 
