--- a/views/index.twig
+++ b/views/index.twig
@@ -63,8 +63,8 @@
     <li><a href="{{jpdoc}}{{base}}shared-services"> 共有サービスの定義(shared service)</a></li>
     <li><a href="{{jpdoc}}{{base}}protected-closures"> パラメータとしてクロージャを保存(Protected closures)</a></li>
     <li><a href="{{jpdoc}}{{base}}core-services"> パラメータにアクセス(Request サービス)</a></li>
-    {% set base = "/extensions.html#" %}
-    <li><a href="{{jpdoc}}{{base}}loading-extensions"> エクステンションの読み込み</a></li>
+    {% set base = "/providers.html#" %}
+    <li><a href="{{jpdoc}}{{base}}loading-extensions"> プロバイダーの読み込み</a></li>
     {% set base = "/testing.html#" %}
     <li><a href="{{jpdoc}}{{base}}phpunit-test"> PHPUnit</a></li>
     <li><a href="{{jpdoc}}{{base}}web"> Webテストケース</a></li>
