--- a/views/index.twig
+++ b/views/index.twig
@@ -87,7 +87,7 @@
     {% set base = "/providers.html#" %}
     <li><a href="{{jpdoc}}{{base}}loading-extensions"> プロバイダーの読み込み</a></li>
     <li><a href="{{jpdoc}}{{base}}id3"> プロバイダーの作成</a></li>
-    <li><a href="{{jpdoc}}{{base}}controllers-providers"> プロバイダーの作成</a></li>
+    <li><a href="{{jpdoc}}{{base}}controllers-providers"> コントローラープロバイダーの作成</a></li>
     {% set base = "/testing.html#" %}
     <li><a href="{{jpdoc}}{{base}}id2"> PHPUnit</a></li>
     <li><a href="{{jpdoc}}{{base}}web"> Webテストケース</a></li>
