Add changelog link

--- a/views/index.twig
+++ b/views/index.twig
@@ -16,6 +16,7 @@
 <h3>基本情報</h3>
 <ul>
 	<li><a href="http://silex.sensiolabs.org/">Silex 公式サイト</a></li>
+	<li><a href="https://github.com/silexphp/Silex/blob/master/doc/changelog.rst">チェンジログ</a></li>
 	<li><a href="https://github.com/silexphp/Silex/tree/1.1/doc">Silex ドキュメント 1.1 (英語)</a></li>
 	<li><a href="http://silex.sensiolabs.org/documentation">Silex ドキュメント 1.2 (英語)</a></li>
 	<li>
